components/select/select.scss
@import "../global/global";

.ring-select {
  display: inline-block;
  position: relative;
  width: 100%;
  color: $ring-text-color;

  &_input-mode {
    .ring-select__icons {
      top: 4px;
    }
  }

  &_disabled {
    opacity: 0.5;
  }

  &__message {
    display: inline-block;
    text-align: center;
    padding: 0 2*$ring-unit;
    margin: $ring-unit 0;
  }

  &__toolbar {
    border-top: 1px solid rgba(0, 0, 0, 0.1);
  }

  &__button {
    padding: 0 2*$ring-unit;
    margin-top: $ring-unit/2;
    margin-bottom: $ring-unit;
    text-align: left;
    line-height: 24px;

    &:hover {
      color: #FFF;
      background-color: $ring-blue-color;
      cursor: pointer;
    }

    &__plus {
      position: relative;
      margin-right: $ring-unit;
      font-size: 19px;
    }
  }

  &__icons {
    .ring-loader.ring-loader_inline {
      top: 2px;
      margin-right: 2px;
    }
  }

  &__label {
    width: 100%;
    text-overflow: ellipsis;
    display: inline-block;
    overflow: hidden;
    vertical-align: middle;
  }
}

.ring-select:not(.ring-button) {
  .ring-select__icons {
    position: absolute;
    top: 2px;
    right: $ring-unit;
  }
}

.ring-button.ring-select {
  font-size: $ring-font-size;
  width: 100%;
  text-align: left;
  white-space: nowrap;
}

.ring-select__selected-icon {
  display: inline-block;
  margin: 0 $ring-unit;
  width: $ring-unit*2;
  height: $ring-unit*2;

  vertical-align: text-bottom;

  background-size: contain;
  background-repeat: no-repeat;
  background-position: center;
}

